<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::table('clinics', function (Blueprint $table): void {
            $table->string('image_path')->nullable()->after('email');
        });

        Schema::table('users', function (Blueprint $table): void {
            $table->string('image_path')->nullable()->after('profile_picture');
        });
    }

    public function down(): void
    {
        Schema::table('users', function (Blueprint $table): void {
            $table->dropColumn('image_path');
        });

        Schema::table('clinics', function (Blueprint $table): void {
            $table->dropColumn('image_path');
        });
    }
};
